styles.css
body {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
    background-color: #2b323cf1;
    background-image: linear-gradient(337deg, rgba(127, 127, 213) 0%, rgba(134, 168, 231) 62%, rgba(145, 234, 228) 100%), url('Space.jpg');
    background-size: cover;
    background-repeat: no-repeat;   
    background-position: center center;
    overflow: hidden;
}

.message {
    color: white !important;
    background-image: linear-gradient(144deg,#7F7FD5, #86A8E7 50%,#91EAE4);
    border: 0;
    border-radius: 7px;
    box-shadow: rgba(17, 14, 185, 0.055) 0 2px 6px -1px !important;
    padding: 7px;
    transition: all 0.1s ease;
}

.message:hover {
    background-image: linear-gradient(144deg, #6E6EC5, #759DD6 50%, #82D0D3);
}

.message:active {
    transform: scale(0.9);
}

.close {
    border: #FFFFFF;
    border-radius: 4px;
}

.form-control.name-email {
    margin-bottom: 1vh;
}

.container {
    width: 100%;
    height: 100vh;
    color: #fff;
    display: flex;
    align-items: center;
    justify-content: center;
    font-family: 'Lato', sans-serif;
    position: relative;
}

.container h1 {
    font-size: 60px;
    font-weight: 600;
    height: 23vh;
}

@media (max-width: 1000px) {
    .container h1 {
        font-size: 23px;
    }
}

.button {
    position: absolute;
    height: 50px;
    align-items: center;
    font-family: 'Lato', sans-serif; 
    top: 60vh;
    left: 50%;
    transform: translateX(-50%);
    transition: all 0.2s ease;
  }

  .button:active {
    height: 45px;
    transform: translateX(-50%) scale(0.9);
  }

  .button:hover {
    top: 59.6vh;
  }

.btn-gradient {
  align-items: center !important;
  background-image: linear-gradient(144deg,#7F7FD5, #86A8E7 50%,#91EAE4) !important;
  border: 0 !important;
  border-radius: 7px !important;
  box-shadow: rgba(17, 14, 185, 0.26) 0 15px 30px -5px !important;
  box-sizing: border-box !important;
  color: #FFFFFF !important;
  display: flex !important;
  font-family: 'Lato', sans-serif !important;
  font-size: 18px !important;
  justify-content: center !important;
  line-height: 1em !important;
  max-width: 100% !important;
  min-width: 140px !important;
  padding: 18px 22px !important;
  text-decoration: none !important;
  user-select: none !important;
  -webkit-user-select: none !important;
  touch-action: manipulation !important;
  white-space: nowrap !important;
  cursor: pointer !important;
}

.btn-gradient:active,
.btn-gradient:hover {
  outline: 0 !important;
}

@media (min-width: 768px) {
  .btn-gradient {
    font-size: 24px !important;
    min-width: 196px !important;
  }
}
/* ... */

